--- a/Colab_4_Joe_Sandbox.ipynb
+++ b/Colab_4_Joe_Sandbox.ipynb
@@ -6,9 +6,8 @@
       "name": "Colab_4_Joe_Sandbox.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "mount_file_id": "1ghr4NZihjZ6zHsC2JQOtZhKjQohnMqVa",
-      "authorship_tag": "ABX9TyPnhEAKS30rW14dvflapz/r",
+      "authorship_tag": "ABX9TyMvL+6x+OM21y1hBBxw7Qvb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2232,7 +2231,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 191
         },
         "id": "5C_33AYAoQ7k",
         "outputId": "8806affe-54b9-4fb6-b064-be0a48aa7cf3"
@@ -2542,7 +2541,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 732
+          "height": 640
         },
         "id": "eAX2jms20YHk",
         "outputId": "7d090dff-e5f3-46c2-8dff-e4403f90fc0b"
@@ -2581,7 +2580,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 228
+          "height": 191
         },
         "id": "_N8PllhSzsBp",
         "outputId": "1cabe154-8ecb-480b-cbbd-cecff303f9f5"
@@ -2622,7 +2621,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 418
+          "height": 363
         },
         "id": "CYG_K_O-yw6w",
         "outputId": "8ccdd92a-597f-49a0-bb11-007574d7f1e8"
@@ -2652,7 +2651,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 492
+          "height": 436
         },
         "id": "Ic5tXAGuwzZ7",
         "outputId": "be76295b-e267-4379-ca6b-674eae9d8a8c"
@@ -3808,21 +3807,41 @@
         "id": "vOtOb-2pMAV_"
       },
       "source": [
-        ""
+        "Selected_Cols = np.array(features)[importance > 0]"
       ],
-      "execution_count": null,
+      "execution_count": 155,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cymWEB_-MASj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cymWEB_-MASj",
+        "outputId": "3b8c4b31-efaf-4246-8357-f78369915150"
       },
       "source": [
-        ""
+        "Selected_Cols"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Seasonal', 'Gray_cement_dispatch_comercial', 'ISE',\n",
+              "       'Construction_lic_area/unt_SIlag_4', 'IEClag_5', 'ISElag_6',\n",
+              "       'Gray_cement_dispatch_Factorylag_9', 'ICElag_9',\n",
+              "       'Housing_total_sales', 'Housing_total_initiation_SIlag_24',\n",
+              "       'Ordinary_creditlag_4', 'Ordinary_creditlag_6', 'working_day'],\n",
+              "      dtype='<U37')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3830,7 +3849,7 @@
         "id": "jkQ9BGS1MAO8"
       },
       "source": [
-        ""
+        "# get coefficients"
       ],
       "execution_count": null,
       "outputs": []
@@ -3841,21 +3860,122 @@
         "id": "56Y09EUUMAIC"
       },
       "source": [
-        ""
+        "coef_table = pd.DataFrame(list(X_train.columns)).copy()"
       ],
-      "execution_count": null,
+      "execution_count": 162,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XvBYpiPSMAFL"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "XvBYpiPSMAFL",
+        "outputId": "7f1e47e1-d4bf-4c37-d683-0a409efed62e"
       },
       "source": [
-        ""
+        "coef_table"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>date</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Seasonal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Consumer_loans</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Construction_lic_unt</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Construction_lic_area</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>937</th>\n",
+              "      <td>Treasury_loanlag_12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>938</th>\n",
+              "      <td>Housing_loanlag_12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>939</th>\n",
+              "      <td>holiday</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>940</th>\n",
+              "      <td>sunday</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>941</th>\n",
+              "      <td>working_day</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>942 rows × 1 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                         0\n",
+              "0                     date\n",
+              "1                 Seasonal\n",
+              "2           Consumer_loans\n",
+              "3     Construction_lic_unt\n",
+              "4    Construction_lic_area\n",
+              "..                     ...\n",
+              "937    Treasury_loanlag_12\n",
+              "938     Housing_loanlag_12\n",
+              "939                holiday\n",
+              "940                 sunday\n",
+              "941            working_day\n",
+              "\n",
+              "[942 rows x 1 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3863,21 +3983,134 @@
         "id": "6A66Nhw7MAAQ"
       },
       "source": [
-        ""
+        "coef_table.insert(len(coef_table.columns),\"Coefs\",model.coef_.transpose())"
       ],
-      "execution_count": null,
+      "execution_count": 165,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AVJj6e2EL_8g"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "AVJj6e2EL_8g",
+        "outputId": "a054fdf2-c7f9-4c75-d5b1-59a1252465ff"
       },
       "source": [
-        ""
+        "coef_table"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>Coefs</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>date</td>\n",
+              "      <td>0.000376</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Seasonal</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Consumer_loans</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Construction_lic_unt</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Construction_lic_area</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>937</th>\n",
+              "      <td>Treasury_loanlag_12</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>938</th>\n",
+              "      <td>Housing_loanlag_12</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>939</th>\n",
+              "      <td>holiday</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>940</th>\n",
+              "      <td>sunday</td>\n",
+              "      <td>-0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>941</th>\n",
+              "      <td>working_day</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>942 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                         0     Coefs\n",
+              "0                     date  0.000376\n",
+              "1                 Seasonal  0.000000\n",
+              "2           Consumer_loans -0.000000\n",
+              "3     Construction_lic_unt  0.000000\n",
+              "4    Construction_lic_area  0.000000\n",
+              "..                     ...       ...\n",
+              "937    Treasury_loanlag_12 -0.000000\n",
+              "938     Housing_loanlag_12 -0.000000\n",
+              "939                holiday -0.000000\n",
+              "940                 sunday -0.000000\n",
+              "941            working_day  0.000000\n",
+              "\n",
+              "[942 rows x 2 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 166
+        }
+      ]
     },
     {
       "cell_type": "code",
